Closed Bug 1680840 Opened 3 years ago Closed 3 years ago

Firefox with Voice Over freezes when changing rotor rule while navigating inside the table.

Categories

(Core :: Disability Access APIs, defect, P1)

Desktop
macOS
defect

Tracking

()

RESOLVED FIXED
87 Branch
Tracking Status
firefox87 --- fixed

People

(Reporter: yzen, Assigned: morgan)

References

Details

(Whiteboard: [Mac2020_2] )

Attachments

(2 files, 3 obsolete files)

STR's:

  • got to about:config
  • expand all preferences
  • navigate into any arbitrary cell (current value for example)
  • I used VO + command + left/right arrow to change the rotor rule to get this stack

Observed:
Firefox freezes for tens of seconds, though then the rotor rule changes.

Profiler link (it's huge and might not load).

Inverted stack from the profiler:

(root)
start
main
XRE_main(int, char**, mozilla::BootstrapConfig const&)
XREMain::XRE_main
XREMain::XRE_main(int, char**, mozilla::BootstrapConfig const&)
XREMain::XRE_mainRun()
nsAppStartup::Run()
nsAppShell::Run()
-[NSApplication run]
-[GeckoNSApplication nextEventMatchingMask:untilDate:inMode:dequeue:]
-[GeckoNSApplication nextEventMatchingMask:untilDate:inMode:dequeue:]
-[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:]
_DPSNextEvent
_BlockUntilNextEventMatchingListInModeWithFilter
ReceiveNextEventCommon
RunCurrentEventLoopInMode
CFRunLoopRunSpecific
__CFRunLoopRun
__CFRunLoopDoSource1
__CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE1_PERFORM_FUNCTION__
mshMIGPerform
_XCopyParameterizedAttributeValue
_AXXMIGCopyParameterizedAttributeValue
CopyParameterizedAttributeValue
NSAccessibilityEntryPointValueForAttributeWithParameter
NSAccessibilityPerformEntryPointObject
___NSAccessibilityEntryPointValueForAttributeWithParameter_block_invoke.821
-[MOXAccessibleBase accessibilityAttributeValue:forParameter:]
-[MOXSearchInfo performSearch]
-[MOXSearchInfo getMatchesForRule:]
mozilla::a11y::Pivot::SearchForward(mozilla::a11y::AccessibleOrProxy&, mozilla::a11y::PivotRule&, bool)
RotorLinkRule::Match(mozilla::a11y::AccessibleOrProxy const&)
-[mozTablePartAccessible moxRole]
-[mozTablePartAccessible isLayoutTablePart]
mozilla::a11y::TableAccessible::IsProbablyLayoutTable()
{virtual override thunk({offset(-136)}, nsContentList::Length())}
nsContentList::PopulateSelf(unsigned int, unsigned int)
Whiteboard: [Mac2020_2]
Severity: -- → S2
Priority: -- → P2
Severity: S2 → S3

Nominating for 86 work.

Priority: P2 → P1
Assignee: nobody → mreschenberg
Attachment #9197195 - Attachment description: Bug 1680840: Fire obj attr changed events to invalidate isLayouTable cache. r?eeejay → Bug 1680840: Fire obj attr changed events to invalidate isLayoutTable cache. r?eeejay,emilio,Jamie
Attachment #9196684 - Attachment description: Bug 1680840: Introduce caching for IsLayoutTable r?eeejay → Bug 1680840: Introduce caching for IsLayoutTable r?eeejay,Jamie
Attachment #9197195 - Attachment description: Bug 1680840: Fire obj attr changed events to invalidate isLayoutTable cache. r?eeejay,emilio,Jamie → Bug 1680840: Fire obj attr changed events to invalidate isLayouTable cache. r?eeejay
Attachment #9196684 - Attachment description: Bug 1680840: Introduce caching for IsLayoutTable r?eeejay,Jamie → Bug 1680840: Introduce caching for IsLayoutTable r?eeejay

Depends on D101512

Depends on: 1688730

Comment on attachment 9196684 [details]
Bug 1680840: Introduce caching for IsLayoutTable r?eeejay

Revision D101512 was moved to bug 1688730. Setting attachment 9196684 [details] to obsolete.

Attachment #9196684 - Attachment is obsolete: true

Comment on attachment 9198525 [details]
Bug 1680840: Test table layout caching r?eeejay

Revision D102652 was moved to bug 1688730. Setting attachment 9198525 [details] to obsolete.

Attachment #9198525 - Attachment is obsolete: true
Attachment #9197195 - Attachment is obsolete: true
Pushed by mreschenberg@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/2448b72b79ae
Fire table styling changed event when style changes that may affect data/layout table classification r=emilio,eeejay
https://hg.mozilla.org/integration/autoland/rev/5f846d21fa37
Introduce table style changed event to mac platform, update caching r=eeejay
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: