Bug 1680840: Fire table styling changed event when style changes that may affect data/layout table classification r=emilio,eeejay

Differential Revision: https://phabricator.services.mozilla.com/D103254