accessible/windows/msaa/nsEventMap.h
@@ -104,5 +104,6 @@ static const uint32_t gWinEventMap[] = {
   kEVENT_WIN_UNKNOWN,                                // nsIAccessibleEvent::EVENT_ANNOUNCEMENT
   kEVENT_WIN_UNKNOWN,                                // nsIAccessibleEvent::EVENT_LIVE_REGION_ADDED
   kEVENT_WIN_UNKNOWN,                                // nsIAccessibleEvent::EVENT_LIVE_REGION_REMOVED
+  kEVENT_WIN_UNKNOWN,                                // nsIAccessibleEvent::EVENT_TABLE_STYLING_CHANGED
     // clang-format on
 };
